// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders the count variant 1`] = `
<span
  class="inline-flex items-center gap-1 bg-bg-light text-text-muted px-2.5 py-1 t-badge rounded-full"
>
  3 Tamanhos
</span>
`;

exports[`Badge > renders the discount variant 1`] = `
<span
  class="inline-flex items-center gap-1 bg-accent text-white px-2.5 py-1 t-badge rounded-full"
>
  25% OFF
</span>
`;

exports[`Badge > renders the info variant 1`] = `
<span
  class="inline-flex items-center gap-1 bg-primary/10 text-primary px-2.5 py-1 t-badge rounded-full"
>
  Info
</span>
`;

exports[`Breadcrumb > renders with a single item 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="flex items-center gap-1 text-xs"
    >
      <li
        class="flex items-center gap-1"
      >
        <span
          aria-current="page"
          class="text-text-main"
        >
          Home
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb > renders with three items 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      class="flex items-center gap-1 text-xs"
    >
      <li
        class="flex items-center gap-1"
      >
        <a
          class="text-text-muted hover:text-primary"
          href="/"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="text-text-muted"
        >
          /
        </span>
      </li>
      <li
        class="flex items-center gap-1"
      >
        <a
          class="text-text-muted hover:text-primary"
          href="/c/colchoes"
        >
          Categoria
        </a>
        <span
          aria-hidden="true"
          class="text-text-muted"
        >
          /
        </span>
      </li>
      <li
        class="flex items-center gap-1"
      >
        <span
          aria-current="page"
          class="text-text-main"
        >
          Produto
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PriceDisplay > renders with a compare-at price above the current price 1`] = `
<div>
  <div
    class="flex flex-col "
  >
    <span
      class="t-meta"
    >
      A partir de
    </span>
    <span
      class="t-price-strike mb-1.5"
    >
      R$ 1.999,00
    </span>
    <p
      class="t-price-medium"
    >
      R$ 1.500,00
      <span
        class="t-price-suffix ml-1"
      >
        à vista
      </span>
    </p>
    <p
      class="t-product-installments mt-1"
    >
      ou até 
      <strong>
        6
        x
      </strong>
       de
       
      <strong>
        R$ 250,00
      </strong>
       sem juros
    </p>
  </div>
</div>
`;

exports[`PriceDisplay > renders without a compare-at price 1`] = `
<div>
  <div
    class="flex flex-col "
  >
    <span
      class="t-meta"
    >
      A partir de
    </span>
    <p
      class="t-price-medium"
    >
      R$ 1.500,00
      <span
        class="t-price-suffix ml-1"
      >
        à vista
      </span>
    </p>
    <p
      class="t-product-installments mt-1"
    >
      ou até 
      <strong>
        6
        x
      </strong>
       de
       
      <strong>
        R$ 250,00
      </strong>
       sem juros
    </p>
  </div>
</div>
`;
